--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "autoprefixer": "^10.4.0",
+    "chart.js": "^3.6.0",
+    "ng2-charts": "^3.0.1",
     "postcss": "^8.4.4",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
