--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "autoprefixer": "^10.4.0",
     "chart.js": "^3.6.0",
     "ng2-charts": "^3.0.1",
+    "objects-to-csv": "^1.3.6",
     "postcss": "^8.4.4",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
